syntax = "proto3";

package event;
option go_package = "mycalendar/api/calendarpb;calendarpb";

import "google/protobuf/timestamp.proto";

message Event {
  string user_id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp start_at = 4;
  string duration = 5;
  string notice_before = 6;
}

message Empty {}

message EventRequest {
  Event event = 1;
}

message DeleteRequest {
  string user_id = 1;
  google.protobuf.Timestamp start = 2;
}

message EventsResponse {
  repeated Event events = 1;
}

message DateRequest {
  google.protobuf.Timestamp date = 1;
}

service CalendarService {
  rpc AddEvent(EventRequest) returns (Empty);
  rpc UpdateEvent(EventRequest) returns (Empty);
  rpc DeleteEvent(DeleteRequest) returns (Empty);

  rpc GetEvents(Empty) returns (EventsResponse);
  rpc GetEventsByDay(DateRequest) returns (EventsResponse);
  rpc GetEventsByWeek(DateRequest) returns (EventsResponse);
  rpc GetEventsByMonth(DateRequest) returns (EventsResponse);
}
